--- a/src/components/GameBoard/GameBoard.module.css
+++ b/src/components/GameBoard/GameBoard.module.css
@@ -3,6 +3,7 @@ td {
   height: 30px;
   background-color: #ebce98;
   border: 1.8px solid black;
+  display: table-cell;
   position: relative;
   transition: box-shadow 0.2s ease-in-out;
   box-sizing: border-box;
@@ -18,7 +19,7 @@ table {
   border: 4px solid #C28840;
 }
 
-  .dot::after {
+.dot::after {
     content: "";
     width: 25%;
     height: 25%;
