--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,6 +1,6 @@
 .button {
 	background-color: #04AA6D;
-	border: none;
+	border: 2px solid transparent;
 	color: white;
 	padding: 15px 32px;
 	text-align: center;
