--- a/src/components/Piece/Piece.module.css
+++ b/src/components/Piece/Piece.module.css
@@ -1,8 +1,23 @@
-.piece {
-  width: 40px;
-  height: 40px;
+.bluePiece {
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background-color: blue;
+
+  /* Centrera texten i mitten */
+  display: flex;
+  align-items: center;     /* lodrätt */
+  justify-content: center; /* vågrätt */
+
+  color: white;            /* textfärg */
+  font-weight: bold;
+}
+
+.redPiece {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: rgb(255, 0, 0);
 
   /* Centrera texten i mitten */
   display: flex;
