--- a/src/components/PlayerName/PlayerName.module.css
+++ b/src/components/PlayerName/PlayerName.module.css
@@ -1,14 +1,15 @@
-input {
+.playerInput {
   max-width: 190px;
   padding: 0.875rem;
   font-size: 1rem;
   border: 1.5px solid #000;
-  border-radius: 0.5rem;
+  border-radius: 1.5rem;
   box-shadow: 2.5px 3px 0 #000;
   outline: none;
   transition: ease 0.25s;
   display: flex;
   margin-top: 12px;
+  gap: 4px
 }
 
 input:focus {
@@ -25,9 +26,4 @@ input:focus {
   font-weight:bold;
   font-size:33px;
   text-shadow:0px 0px 0 rgb(205,222,-33),1px 1px 0 rgb(181,198,-57), 2px 2px 0 rgb(158,175,-80),3px 3px 2px rgba(0,0,0,0.15),3px 3px 1px rgba(0,0,0,0.5),0px 0px 2px rgba(0,0,0,.2);
-}
-
-.divider {
-  border-left: 6px solid green;
-  height: 500px;
 }
