Gameboard can now read json file to gameboard emptyboard, fullboard works

--- a/src/components/Piece/Piece.module.css
+++ b/src/components/Piece/Piece.module.css
@@ -4,11 +4,6 @@
   border-radius: 50%;
   background-color: blue;
 
-  /* Centrera texten i mitten */
-  display: flex;
-  align-items: center;     /* lodrätt */
-  justify-content: center; /* vågrätt */
-
   color: white;            /* textfärg */
   font-weight: bold;
 }
@@ -19,11 +14,7 @@
   border-radius: 50%;
   background-color: rgb(255, 0, 0);
 
-  /* Centrera texten i mitten */
-  display: flex;
-  align-items: center;     /* lodrätt */
-  justify-content: center; /* vågrätt */
-
   color: white;            /* textfärg */
   font-weight: bold;
+;
 }
