--- a/src/components/Piece/Piece.module.css
+++ b/src/components/Piece/Piece.module.css
@@ -1,20 +1,20 @@
-.bluePiece {
+.blackPiece {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: blue;
+  background-color: black;
 
-  color: white;            /* textfärg */
+  color: white; /* textfärg */
   font-weight: bold;
 }
 
-.redPiece {
+.whitePiece {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  background-color: rgb(255, 0, 0);
+  background-color: white;
+  border: 1px solid #000;
 
-  color: white;            /* textfärg */
+  color: black; /* textfärg */
   font-weight: bold;
-;
 }
