--- a/src/components/GameBoard/GameBoard.module.css
+++ b/src/components/GameBoard/GameBoard.module.css
@@ -35,7 +35,7 @@
   box-shadow: inset 2px 2px 10px 0px #bf9a56;
 }
 
-.dot::after {
+/* .dot::after {
   content: "";
   position: absolute;
   width: 6px;
@@ -46,7 +46,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
-}
+} */
 
 .blackPiece,
 .whitePiece {
