--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -1,6 +1,14 @@
 .woodenBg {
-  width: 100%;
-  height: 100%;
+  border-radius: 12px;
   padding: 1rem;
-  background-color: #f5f3ef;
+
+background-image:
+  repeating-linear-gradient(
+      -45deg,
+      rgba(0, 0, 0, 0.1) 0px,
+      rgba(0, 0, 0, 0.02) 1px,
+      transparent 2px,
+      transparent 6px
+    ),
+    linear-gradient(180deg, #8e734f, #ddb182);
 }
