--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -1,5 +1,10 @@
 .woodenBg {
   padding: 1rem;
+  height: 100%;
+  width: 100%;
+  padding: 1rem;
+  box-sizing: border-box;
+  overflow: hidden;
 
   background-image: repeating-linear-gradient(
       -45deg,
